Add LucidLink getTime (S3 API latency) display alongside GET speed
Backend Changes:
- Enhanced lucidlink-stats-worker.js to collect both getBytes and getTime metrics
- Added support for LUCIDLINK_INCLUDE_GET_TIME environment variable
- Parse objectstore output format with separate columns for throughput and latency
- Convert getTime units (μs, ms, s) to consistent milliseconds
- Updated WebSocket broadcasting to include getTimeMs field

Frontend Changes:
- Updated App.js WebSocket handler to receive and display getTimeMs
- Added getTime display (in ms) next to GET speed in header
- Styled getTime as smaller, muted text for subtle presentation
- Real-time updates via WebSocket for both speed and latency

Environment Configuration:
- Added LUCIDLINK_INCLUDE_GET_TIME=true to enable getTime collection
- Updated both development and production environment templates
- Maintains backward compatibility (defaults to true)

The display now shows: "1720.32 MiB/s 8.4ms" with getTime in smaller gray text

--- a/.env.development
+++ b/.env.development
@@ -18,6 +18,7 @@ LUCIDLINK_COMMAND=/usr/local/bin/lucid
 LUCIDLINK_FS_1_PORT=7778
 LUCIDLINK_FILESPACE=production.dmpfs
 ENABLE_LUCIDLINK_STATS=true
+LUCIDLINK_INCLUDE_GET_TIME=true
 LUCIDLINK_API_HOST=host.docker.internal
 
 # Development: Use empty values so container doesn't try to mount LucidLink
