--- a/.env.production
+++ b/.env.production
@@ -25,6 +25,7 @@ LUCIDLINK_USER=your-email@domain.com
 LUCIDLINK_PASSWORD=your-secure-password
 LUCID_S3_PROXY=http://YOUR_SERVER_IP:80
 ENABLE_LUCIDLINK_STATS=true
+LUCIDLINK_INCLUDE_GET_TIME=true
 
 # Authentication (CRITICAL - change these!)
 JWT_SECRET=GENERATE_SECURE_JWT_SECRET_HERE
@@ -33,10 +34,12 @@ ADMIN_USERNAME=admin
 ADMIN_PASSWORD=GENERATE_STRONG_ADMIN_PASSWORD_HERE
 
 # Frontend Configuration
-REACT_APP_API_URL=https://YOUR_SERVER_IP/api
-REACT_APP_WS_URL=wss://YOUR_SERVER_IP
+# Frontend Configuration (production)
+# Uses SERVER_HOST environment variable (REQUIRED for production)
+REACT_APP_API_URL=https://${SERVER_HOST}/api
+REACT_APP_WS_URL=wss://${SERVER_HOST}
 REACT_APP_LUCIDLINK_MOUNT_POINT=/media/lucidlink-1
-REACT_APP_GRAFANA_URL=https://YOUR_SERVER_IP:3000
+REACT_APP_GRAFANA_URL=https://${SERVER_HOST}:3000
 
 # SSL Configuration (for Let's Encrypt or custom certificates)
 SSL_CERT_PATH=/etc/ssl/certs/your-cert.pem
