Implement BROWSER/ADMIN tabs and vertical admin interface
- Transform app from SPA to multi-page with React Router DOM v7.7.0
- Replace "LOCATIONS" sidebar header with BROWSER/ADMIN tab navigation
- Extract 3,315-line App.js into modular components (BrowserView, AdminView)
- Add vertical admin tabs: System, Users, SiteCache, Terminal
- Implement System tab with host information display (CPU, RAM, storage, network)
- Create host-info.json collection script for accurate host system data
- Fix filesystem tree indentation and navigation issues
- Add proper memory calculation accuracy (KB arithmetic before GB conversion)
- Use outline SVG icons throughout for consistent design
- Add WebSocket error handling for undefined properties
- Default to BROWSER tab on first load

Components added:
- TabNavigation: Horizontal BROWSER/ADMIN switcher
- AdminTabNavigation: Vertical admin section tabs
- BrowserView: Complete file browser functionality
- AdminView: System administration interface
- FileSystemAPI: Extracted API service layer
- fileUtils: Shared utility functions

System Information features:
- Host IP, Linux release, CPU cores and model
- Real-time memory usage with proper precision
- Storage devices with mountpoints (excludes loop devices)
- Host system data collection via shell script

Technical improvements:
- Fixed react-arborist tree data structure for proper indentation
- Added comprehensive null checks and error handling
- Improved authentication flow and API error handling
- Enhanced Docker environment configuration

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -20,10 +20,13 @@ services:
       # LucidLink mount point will be created by container daemon
       - varnish_stats:/data
       - ${PREVIEW_CACHE_HOST_PATH:-./data/previews}:/app/preview-cache  # Persistent preview cache
+      # Mount host system info file if it exists
+      - ./host-info.json:/app/host-info.json:ro
     environment:
       NODE_ENV: development
       PREVIEW_CACHE_DIR: /app/preview-cache
       PORT: 3001
+      SERVER_HOST: ${SERVER_HOST:-localhost}
       DB_HOST: postgres  # Use service name with bridge networking
       DB_PORT: 5432
       DB_NAME: sitecache_db
@@ -90,7 +93,7 @@ services:
       - ./frontend/package.json:/app/package.json
       - /app/node_modules  # Anonymous volume for node_modules
     environment:
-      REACT_APP_API_URL: /api
+      REACT_APP_API_URL: http://${SERVER_HOST:-localhost}:3001/api
       # WebSocket URL uses SERVER_HOST - set in .env.development.local to your machine's IP
       REACT_APP_WS_URL: ws://${SERVER_HOST:-localhost}:3002
       REACT_APP_LUCIDLINK_MOUNT_POINT: /media/lucidlink-1
