--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,7 +61,9 @@ services:
       LUCIDLINK_FS_1_PORT: ${LUCIDLINK_FS_1_PORT:-7778}
       ENABLE_NETWORK_STATS: "false"
       ENABLE_LUCIDLINK_STATS: ${ENABLE_LUCIDLINK_STATS:-true}
+      LUCIDLINK_INCLUDE_GET_TIME: ${LUCIDLINK_INCLUDE_GET_TIME:-true}
       LUCIDLINK_COMMAND: ${LUCIDLINK_COMMAND:-/usr/local/bin/lucid}
+      LUCIDLINK_REST_ENDPOINT: ${LUCIDLINK_REST_ENDPOINT}
       # LucidLink daemon configuration
       LUCIDLINK_FILESPACE: ${LUCIDLINK_FILESPACE}
       LUCIDLINK_USER: ${LUCIDLINK_USER}
