Implement terminal interface with host system access
- Add xterm.js terminal component with WebSocket integration
- Configure Docker containers with privileged mode for host access
- Implement nsenter-based host namespace switching
- Add node-pty backend support for pseudo-terminal spawning
- Replace emoji terminal icon with clean outline SVG icon
- Enable admin users to run host system commands like systemctl

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -74,9 +74,11 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-    # LucidLink FUSE filesystem requirements
+    # LucidLink FUSE filesystem requirements and host system access
     cap_add:
       - SYS_ADMIN
+    pid: host
+    privileged: true
 
   # Frontend with volume mount for hot reload
   frontend:
