--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^2.7.0",
+    "node-pty": "^1.0.0",
     "pg": "^8.11.3",
     "redis": "^4.6.10",
     "uuid": "^9.0.1",
