--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,9 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@xterm/addon-attach": "^0.11.0",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/xterm": "^5.5.0",
     "hls.js": "^1.6.7",
     "http-proxy-middleware": "^3.0.5",
     "react": "^19.1.0",
