Standardize on POSTGRES_PASSWORD for database authentication
- Remove redundant DB_PASSWORD from all environment files
- Update documentation to only reference POSTGRES_PASSWORD
- Backend already supports both with POSTGRES_PASSWORD priority
- Docker Compose already maps POSTGRES_PASSWORD to DB_PASSWORD
- Simplifies configuration by requiring only one password variable

--- a/.env.example
+++ b/.env.example
@@ -33,8 +33,8 @@ DB_PORT=5432
 DB_NAME=sitecache_db
 DB_USER=sitecache_user
 
-# IMPORTANT: Change these passwords for production!
-DB_PASSWORD=your_secure_password_here
+# IMPORTANT: Change this password for production!
+# This password is used for PostgreSQL database authentication
 POSTGRES_PASSWORD=your_secure_password_here
 
 # =============================================================================
