--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,8 @@
 # SiteCache Browser Production Environment Configuration
 # Copy this file to .env and update with your production values
 
-# Database Configuration (use strong passwords!)
+# Database Configuration
+# IMPORTANT: Use a strong, unique password for production!
 POSTGRES_PASSWORD=your_very_strong_password_here
 DB_HOST=localhost  # Using host network mode
 DB_PORT=5432
