--- a/.env.development
+++ b/.env.development
@@ -8,6 +8,7 @@ DB_HOST=postgres
 DB_PORT=5432
 DB_NAME=sitecache_db
 DB_USER=sitecache_user
+# Development password (change for production!)
 POSTGRES_PASSWORD=sitecache_password
 
 # LucidLink Configuration (development values)
