Improve RUI configuration documentation
- Clarify the relationship between ENABLE_RUI and ENABLE_RUI_FILESYSTEM_SCANNER
- Document the three RUI operation modes
- Add clear explanations in .env.example and README.md
- Explain that ENABLE_RUI is the master switch
- Explain that filesystem scanner provides better performance

This helps users understand why both variables exist and how to configure RUI for their needs.

--- a/.env.example
+++ b/.env.example
@@ -133,12 +133,19 @@ VARNISH_STATS_INTERVAL=60000
 VARNISH_CONTAINER_NAME=sitecache-varnish-1
 
 # Remote Upload Indicator (RUI) service
-ENABLE_RUI=true
-ENABLE_RUI_FILESYSTEM_SCANNER=true
-RUI_SCAN_INTERVAL=30000
-RUI_MONITOR_INTERVAL=2000
-RUI_BATCH_SIZE=100
-RUI_MAX_CONCURRENT_MONITORS=10
+# Tracks files being uploaded across the LucidLink filesystem
+#
+# RUI Operation Modes:
+# 1. Disabled: ENABLE_RUI=false (no upload tracking)
+# 2. Database only: ENABLE_RUI=true, ENABLE_RUI_FILESYSTEM_SCANNER=false (lighter resource usage)
+# 3. Full scanning: ENABLE_RUI=true, ENABLE_RUI_FILESYSTEM_SCANNER=true (best performance)
+#
+ENABLE_RUI=true                          # Master switch for entire RUI feature
+ENABLE_RUI_FILESYSTEM_SCANNER=true       # Enable filesystem scanning (in addition to database)
+RUI_SCAN_INTERVAL=30000                  # How often to scan for uploads (ms)
+RUI_MONITOR_INTERVAL=2000                # How often to check upload progress (ms)
+RUI_BATCH_SIZE=100                       # Number of files to process per batch
+RUI_MAX_CONCURRENT_MONITORS=10           # Max concurrent upload monitors
 
 # =============================================================================
 # TERMINAL FEATURE (Admin)
