--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,7 +6,7 @@ services:
   backend:
     build:
       context: ..
-      dockerfile: ./sc-manager/backend/Dockerfile
+      dockerfile: ./sc-manager-greenfield/backend/Dockerfile
       target: production
     container_name: sc-mgr-backend-prod
     # Performance optimizations
@@ -57,18 +57,8 @@ services:
       LUCIDLINK_API_HOST: ${LUCIDLINK_API_HOST:-host.docker.internal}
       # Configure S3 proxy for Varnish cache
       LUCID_S3_PROXY: ${LUCID_S3_PROXY}
-      # Video transcoding configuration (inherits from base compose but can override)
-      TRANSCODE_VIDEO_BITRATE: ${TRANSCODE_VIDEO_BITRATE:-2800k}
-      TRANSCODE_VIDEO_MAXRATE: ${TRANSCODE_VIDEO_MAXRATE:-3000k}
-      TRANSCODE_VIDEO_BUFSIZE: ${TRANSCODE_VIDEO_BUFSIZE:-6000k}
-      TRANSCODE_VIDEO_WIDTH: ${TRANSCODE_VIDEO_WIDTH:-1280}
-      TRANSCODE_VIDEO_HEIGHT: ${TRANSCODE_VIDEO_HEIGHT:-720}
-      TRANSCODE_AUDIO_BITRATE: ${TRANSCODE_AUDIO_BITRATE:-128k}
-      TRANSCODE_AUDIO_CODEC: ${TRANSCODE_AUDIO_CODEC:-aac}
-      TRANSCODE_AUDIO_CHANNELS: ${TRANSCODE_AUDIO_CHANNELS:-2}
-      TRANSCODE_AUDIO_SAMPLE_RATE: ${TRANSCODE_AUDIO_SAMPLE_RATE:-48000}
-      TRANSCODE_HLS_SEGMENT_TIME: ${TRANSCODE_HLS_SEGMENT_TIME:-2}
-      TRANSCODE_CONTAINER_FORMAT: ${TRANSCODE_CONTAINER_FORMAT:-hls}
+      # Media preview service URL
+      MEDIA_PREVIEW_URL: ${MEDIA_PREVIEW_URL:-http://media-preview:3003}
     volumes:
       # Application logs
       - backend_logs:/app/logs
