--- a/frontend/Dockerfile.caddy
+++ b/frontend/Dockerfile.caddy
@@ -16,9 +16,9 @@ ENV NODE_ENV=production
 ENV GENERATE_SOURCEMAP=false
 
 WORKDIR /app
-COPY sc-manager/frontend/package*.json ./
+COPY sc-manager-greenfield/frontend/package*.json ./
 RUN npm ci
-COPY sc-manager/frontend/ .
+COPY sc-manager-greenfield/frontend/ .
 RUN npm run build
 
 # Production stage with Caddy
@@ -28,7 +28,7 @@ FROM caddy:2-alpine AS production
 COPY --from=builder /app/build /usr/share/caddy
 
 # Copy Caddyfile
-COPY sc-manager/frontend/Caddyfile /etc/caddy/Caddyfile
+COPY sc-manager-greenfield/frontend/Caddyfile /etc/caddy/Caddyfile
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
