--- a/media-preview/package.json
+++ b/media-preview/package.json
@@ -1,32 +1,26 @@
 {
   "name": "media-preview-service",
   "version": "1.0.0",
-  "description": "Standalone media preview service for video transcoding and image processing",
+  "description": "Dedicated media preview and transcoding service for SiteCache Manager",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "redis": "^4.6.5"
+    "redis": "^4.6.10",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "engines": {
-    "node": ">=18.0.0"
-  },
   "keywords": [
     "media",
     "preview",
-    "video",
     "transcoding",
-    "image",
-    "processing",
-    "ffmpeg",
-    "imagemagick"
+    "ffmpeg"
   ],
   "author": "",
   "license": "MIT"
