--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -15,6 +15,13 @@ server {
     # Handle React Router routes
     location / {
         try_files $uri $uri/ /index.html;
+        
+        # Prevent caching of index.html
+        location = /index.html {
+            add_header Cache-Control "no-store, no-cache, must-revalidate, max-age=0";
+            add_header Pragma "no-cache";
+            expires 0;
+        }
     }
 
     # API proxy to backend
