Change default video transcoding bitrate to 1000k
- Updated TRANSCODE_VIDEO_BITRATE from 2800k to 1000k
- Updated TRANSCODE_VIDEO_MAXRATE from 3000k to 1500k
- Updated TRANSCODE_VIDEO_BUFSIZE from 6000k to 2000k
- Changed defaults in docker-compose.yml, media preview services, and production env generator
- This reduces bandwidth usage while maintaining good quality for preview videos

--- a/docker/sitecache-browser.service
+++ b/docker/sitecache-browser.service
@@ -1,12 +1,12 @@
 [Unit]
-Description=SiteCache Browser Docker Application
+Description=TeamCache Manager Docker Application
 Requires=docker.service
 After=docker.service lucidlink.service
 
 [Service]
 Type=oneshot
 RemainAfterExit=true
-WorkingDirectory=/opt/sitecache-browser
+WorkingDirectory=/opt/teamcache-manager
 ExecStart=/usr/bin/docker compose -f docker-compose.production.yml up -d
 ExecStop=/usr/bin/docker compose -f docker-compose.production.yml down
 TimeoutStartSec=0
