--- a/frontend/nginx.production.conf
+++ b/frontend/nginx.production.conf
@@ -19,7 +19,7 @@ server {
 
     # API proxy to backend on host network
     location /api/ {
-        proxy_pass http://127.0.0.1:3001;
+        proxy_pass http://backend:3001;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -37,7 +37,7 @@ server {
 
     # WebSocket proxy for real-time updates
     location /ws {
-        proxy_pass http://127.0.0.1:3001;
+        proxy_pass http://backend:3001;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -50,6 +50,16 @@ server {
         proxy_connect_timeout 7d;
         proxy_send_timeout 7d;
         proxy_read_timeout 7d;
+    }
+
+    # Preview images - must come before static assets
+    location ~* ^/api/preview/image/[^/]+/preview\.jpg$ {
+        proxy_pass http://backend:3001;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # Cache static assets
