Implement video preview queue system and fix production deployment
Major changes:
- Added video preview job queue system with workers
- Fixed nginx SSL configuration for production deployments
- Switched from Caddy to nginx for HTTPS due to configuration issues
- Fixed frontend production build to use nginx instead of dev server
- Extended nginx timeouts to 24 hours for long-running preview operations
- Fixed database initialization to include users table
- Added video preview jobs to Running Jobs panel display
- Changed video preview confirmation from alert to toast notification
- Fixed Content Security Policy violations with HTTPS URLs
- Added comprehensive deployment and testing scripts

Video preview features:
- Queue-based processing with configurable workers
- Support for transcoding non-web-compatible video formats
- Skip web-compatible videos and already transcoded files
- Real-time progress updates via WebSocket
- Database schema for jobs, items, and profiles

Production improvements:
- Automated SSL certificate generation
- Proper environment variable handling
- Database backup and restore scripts
- Smoke tests for production validation
- Multi-stage Docker builds with production targets

--- a/.env.example
+++ b/.env.example
@@ -85,11 +85,15 @@ ADMIN_PASSWORD=change_me_immediately
 # =============================================================================
 
 # These URLs are automatically constructed using SERVER_HOST
-# Only override if you need different ports or protocols
-REACT_APP_API_URL=http://${SERVER_HOST}:3001/api
-REACT_APP_WS_URL=ws://${SERVER_HOST}:3002
+# Default uses HTTPS with Caddy auto-SSL
+REACT_APP_API_URL=https://${SERVER_HOST}/api
+REACT_APP_WS_URL=wss://${SERVER_HOST}/ws
 REACT_APP_LUCIDLINK_MOUNT_POINT=/media/lucidlink-1
-REACT_APP_GRAFANA_URL=http://${SERVER_HOST}:3000
+REACT_APP_GRAFANA_URL=https://${SERVER_HOST}:3000
+
+# For non-SSL deployment (development only), uncomment these:
+# REACT_APP_API_URL=http://${SERVER_HOST}:3001/api
+# REACT_APP_WS_URL=ws://${SERVER_HOST}:3002
 
 # =============================================================================
 # SERVICE CONFIGURATION
@@ -194,13 +198,14 @@ GENERATE_SOURCEMAP=true
 # SSL/TLS CONFIGURATION (Production)
 # =============================================================================
 
-# For production deployments with SSL:
-# - Use docker-compose.caddy.yml for automatic SSL with Caddy
-# - Or use docker-compose.ssl.yml for manual SSL with nginx
-# 
-# Update frontend URLs to use https:// and wss:// protocols:
-# REACT_APP_API_URL=https://${SERVER_HOST}/api
-# REACT_APP_WS_URL=wss://${SERVER_HOST}/ws
+# Production deployments use Caddy with automatic HTTPS by default:
+# - Automatic self-signed certificates for IP addresses
+# - Automatic Let's Encrypt certificates for domain names
+# - No configuration needed - just run ./scripts/deploy-production.sh
+#
+# For other SSL options:
+# - Use 'nginx' mode for manual SSL certificates
+# - Use 'none' mode for development without SSL (not recommended)
 
 # =============================================================================
 # NOTES
