--- a/docker-compose.caddy.yml
+++ b/docker-compose.caddy.yml
@@ -7,20 +7,26 @@ services:
       context: ../
       dockerfile: ./sc-manager-greenfield/frontend/Dockerfile.caddy
       args:
-        REACT_APP_API_URL: ${REACT_APP_API_URL:-http://192.168.8.28:3001/api}
-        REACT_APP_WS_URL: ${REACT_APP_WS_URL:-ws://192.168.8.28:3002}
+        # Use HTTPS URLs with SERVER_HOST variable
+        REACT_APP_API_URL: ${REACT_APP_API_URL:-https://${SERVER_HOST:-localhost}/api}
+        REACT_APP_WS_URL: ${REACT_APP_WS_URL:-wss://${SERVER_HOST:-localhost}/ws}
         REACT_APP_LUCIDLINK_MOUNT_POINT: ${LUCIDLINK_MOUNT_POINT:-/media/lucidlink-1}
-        REACT_APP_GRAFANA_URL: ${REACT_APP_GRAFANA_URL:-http://168.119.133.122:3000}
+        REACT_APP_GRAFANA_URL: ${REACT_APP_GRAFANA_URL:-https://${SERVER_HOST:-localhost}:3000}
     image: sc-manager-frontend-caddy
     container_name: sc-mgr-frontend-caddy
     ports:
-      - "8090:80"   # HTTP
-      - "8443:443"  # HTTPS  
+      - "443:443"   # HTTPS with auto certificates
+      # Port 80 is handled internally by Caddy for HTTP->HTTPS redirects
     volumes:
-      - ./ssl:/etc/ssl/certs:ro  # Mount SSL certificates
+      - ./ssl:/etc/ssl/certs:ro  # Mount SSL certificates (optional override)
     environment:
-      - REACT_APP_API_URL=${REACT_APP_API_URL:-http://localhost:3001/api}
-      - REACT_APP_WS_URL=${REACT_APP_WS_URL:-ws://localhost:3002}
+      # Runtime environment for Caddy
+      - SERVER_HOST=${SERVER_HOST:-localhost}
     depends_on:
       - backend
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
