--- a/docker-compose.ssl.yml
+++ b/docker-compose.ssl.yml
@@ -3,79 +3,20 @@
 
 services:
   frontend:
+    # Ensure we're using the production nginx image, not dev server
+    image: sc-manager-greenfield-frontend:latest
+    build:
+      target: production
     ports:
-      - "80:80"
-      - "443:443"
+      - "443:443"  # Only expose HTTPS, nginx handles HTTP->HTTPS redirect internally
     volumes:
       - ./ssl:/etc/nginx/ssl:ro
+      - ./frontend/nginx.ssl.conf:/etc/nginx/conf.d/default.conf:ro
     environment:
       - ENABLE_SSL=true
-    # Override nginx configuration to enable SSL
-    command: >
-      sh -c "
-        # Create SSL-enabled nginx config
-        cat > /etc/nginx/conf.d/default.conf << 'NGINX_EOF'
-        server {
-            listen 80;
-            server_name localhost;
-            return 301 https://$$;
-        }
-
-        server {
-            listen 443 ssl http2;
-            server_name localhost;
-            
-            # SSL Configuration
-            ssl_certificate /etc/nginx/ssl/tc-mgr.crt;
-            ssl_certificate_key /etc/nginx/ssl/tc-mgr.key;
-            ssl_protocols TLSv1.2 TLSv1.3;
-            ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
-            ssl_prefer_server_ciphers off;
-            ssl_session_cache shared:SSL:10m;
-            ssl_session_timeout 10m;
-            
-            # Security Headers
-            add_header Strict-Transport-Security \"max-age=31536000; includeSubDomains\" always;
-            add_header X-Content-Type-Options nosniff always;
-            add_header X-Frame-Options DENY always;
-            add_header X-XSS-Protection \"1; mode=block\" always;
-            
-            root /usr/share/nginx/html;
-            index index.html;
-            
-            # Frontend routes
-            location / {
-                try_files $ $/ /index.html;
-            }
-            
-            # API proxy to backend
-            location /api/ {
-                proxy_pass http://backend:3001;
-                proxy_set_header Host $;
-                proxy_set_header X-Real-IP $;
-                proxy_set_header X-Forwarded-For $;
-                proxy_set_header X-Forwarded-Proto $;
-                proxy_set_header X-Forwarded-Host $;
-                proxy_set_header X-Forwarded-Port $;
-            }
-            
-            # WebSocket proxy
-            location /ws {
-                proxy_pass http://backend:3002;
-                proxy_http_version 1.1;
-                proxy_set_header Upgrade $;
-                proxy_set_header Connection \"upgrade\";
-                proxy_set_header Host $;
-                proxy_set_header X-Real-IP $;
-                proxy_set_header X-Forwarded-For $;
-                proxy_set_header X-Forwarded-Proto $;
-            }
-        }
-        NGINX_EOF
-        
-        # Start nginx
-        nginx -g 'daemon off;'
-      "
+    # Override any development command/entrypoint
+    command: ["nginx", "-g", "daemon off;"]
+    entrypoint: []
 
 volumes:
   ssl_certs:
