--- a/frontend/nginx.production.conf
+++ b/frontend/nginx.production.conf
@@ -37,7 +37,24 @@ server {
 
     # WebSocket proxy for real-time updates
     location /ws {
-        proxy_pass http://backend:3001;
+        proxy_pass http://backend:3002;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # WebSocket specific timeouts
+        proxy_connect_timeout 7d;
+        proxy_send_timeout 7d;
+        proxy_read_timeout 7d;
+    }
+    
+    # Terminal WebSocket proxy
+    location /terminal {
+        proxy_pass http://backend:3002/terminal;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
