--- a/frontend/nginx.ssl.conf
+++ b/frontend/nginx.ssl.conf
@@ -131,6 +131,23 @@ server {
         proxy_read_timeout 7d;
     }
     
+    # Terminal WebSocket proxy
+    location /terminal {
+        proxy_pass http://backend:3002/terminal;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # WebSocket specific timeouts
+        proxy_connect_timeout 7d;
+        proxy_send_timeout 7d;
+        proxy_read_timeout 7d;
+    }
+    
     # Cache static assets
     location ~* \.(jpg|jpeg|png|gif|ico|css|js|pdf|doc|docx)$ {
         expires 1y;
