Change default SSL mode from caddy to nginx for IP-based deployments
- Update deploy-production.sh to use nginx as default SSL mode
- Update generate-production-env.sh help text to reflect nginx as default
- Update .env.example documentation to clarify nginx works with IP addresses
- Most deployments use IP addresses, making nginx the better default choice

--- a/.env.example
+++ b/.env.example
@@ -85,7 +85,7 @@ ADMIN_PASSWORD=change_me_immediately
 # =============================================================================
 
 # These URLs are automatically constructed using SERVER_HOST
-# Default uses HTTPS with Caddy auto-SSL
+# Default uses HTTPS with nginx self-signed SSL (works with IP addresses)
 REACT_APP_API_URL=https://${SERVER_HOST}/api
 REACT_APP_WS_URL=wss://${SERVER_HOST}/ws
 REACT_APP_LUCIDLINK_MOUNT_POINT=/media/lucidlink-1
@@ -198,14 +198,14 @@ GENERATE_SOURCEMAP=true
 # SSL/TLS CONFIGURATION (Production)
 # =============================================================================
 
-# Production deployments use Caddy with automatic HTTPS by default:
-# - Automatic self-signed certificates for IP addresses
-# - Automatic Let's Encrypt certificates for domain names
+# Production deployments use nginx with self-signed SSL by default:
+# - Works reliably with IP addresses (most common deployment scenario)
+# - Automatic self-signed certificate generation
 # - No configuration needed - just run ./scripts/deploy-production.sh
 #
 # For other SSL options:
-# - Use 'nginx' mode for manual SSL certificates
-# - Use 'none' mode for development without SSL (not recommended)
+# - Use 'caddy' mode for automatic Let's Encrypt certificates (requires domain name)
+# - Use 'none' mode for development without SSL (not recommended for production)
 
 # =============================================================================
 # NOTES
